--- a/app1/app1/app1.csproj
+++ b/app1/app1/app1.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{BF7F2833-9E61-4F30-961A-3DA6D3DE0272}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>app1</RootNamespace>
-    <AssemblyName>app1</AssemblyName>
+    <RootNamespace>MST_Z_PREDICT</RootNamespace>
+    <AssemblyName>MST_Z_PREDICT</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
