redesigned user interface and added new functionality

--- a/app1/app1/app1.csproj
+++ b/app1/app1/app1.csproj
@@ -100,5 +100,17 @@
   <ItemGroup>
     <Resource Include="favicon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="TU_Chemnitz.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="download.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="logo_mst %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="mst logo.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
